# torch-dev-utils

./: .gitignore  .pre-commit-config.yaml  Changelog.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup_scripts.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/res/: post_create_command.bash
.github/actions/setup/: action.yml
.github/workflows/: pre-commit.yml  test.yml
src/torch_dev_utils/: __init__.py  data_loading.py  misc.py  model.py  serialization.py  training.py
test/: test_base_model_components.py  test_base_trainer.py  test_builtin_optimizer_wrapper.py  test_model_checkpoint_handler.py  test_processed_dataset_loading.py
test/res/base_trainer/checkpoints/: metadata.json
test/res/base_trainer/checkpoints/ckpt_0/: layer.pth  optimizer_state.pth
test/res/base_trainer/dataset/: sample_0.pt  sample_1.pt  sample_2.pt  sample_3.pt  sample_4.pt
test/res/model_checkpoint_handler/: metadata.json
test/res/model_checkpoint_handler/ckpt_0/: layer_1.pth  optimizer_state.pth
test/res/processed_dataset_loading/: 0.pt  1.pt  2.pt  3.pt  4.pt
