[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch_dev_utils"
version = "0.1.0"
requires-python=">=3.11"
dependencies = [
    "torch>=2.5.1",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "pre-commit",
    "pylint"
]
